# BDR_OS

./: .env.example  .gitignore  Makefile  README.md  RUNBOOK.md  docker-compose.yml
backend/: Dockerfile  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: a72a279e0184_initial_schema_all_six_objects.py
backend/app/: database.py  main.py  schemas.py
backend/app/adapters/: registry.py
backend/app/agents/: agents.yaml  base.py  book_response.py  call_prep.py  copy.py  crm_scribe.py  inbox_triage.py  no_show_recovery.py  pipeline_hygiene.py  reporting.py  research_brief.py  show_rate_machine.py  show_rate_machine.yaml  triggers.py  value_props.yaml  voice_profile.md
backend/app/api/: debug_sim.py  routes.py
backend/app/dispatcher/: __init__.py  autoapprove.py  effort.yaml  ev.py  job_factory.py  morning_plan.py  ranker.py
backend/app/engine/: __init__.py  bottleneck.py  cascade.py  catchup.py  clawback.py  earnings.py  pace.py  points.py  promotion.py  (+3 more)
backend/fixtures/: calendar.json  crm.json  event_timeline.json  generate.py  signals.json  threads.json  transcripts.json
backend/tests/: conftest.py  test_adapter_registry.py  test_call_prep_agent.py  test_copy_agent.py  test_crm_scribe.py  test_debug_sim.py  test_dispatcher.py  test_engine.py  test_inbox_triage_and_book_response.py  test_job_lifecycle.py  test_mock_adapters.py  test_models_roundtrip.py  test_no_show_recovery.py  test_pipeline_hygiene.py  test_points_engine.py  test_policy.py  test_reporting_agent.py  test_research_brief_agent.py  test_show_rate_machine.py
(+70 files in other folders)
