[project]
name = "bdr-os"
version = "0.1.0"
description = "BDR OS — personal orchestration layer for outbound sales"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115,<1",
    "uvicorn[standard]>=0.30,<1",
    "sqlalchemy>=2.0,<3",
    "alembic>=1.13,<2",
    "pydantic>=2.7,<3",
    "pydantic-settings>=2.3,<3",
    "apscheduler>=3.10,<4",
    "python-dotenv>=1.0,<2",
    "pyyaml>=6,<7",
    "anthropic>=0.30,<1",
    "jinja2>=3.1,<4",
]

[project.optional-dependencies]
dev = [
    "pytest>=8,<9",
    "pytest-asyncio>=0.23,<1",
    "httpx>=0.27,<1",
    "ruff>=0.5,<1",
]

[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["app*"]

[tool.ruff]
target-version = "py312"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "I", "W", "UP"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
